@@ -12,7 +12,7 @@ Disassembly of section .text:
 0[0-9a-f]+ <[^>]+> ee100a90 	fmrs	r0, s1
 0[0-9a-f]+ <[^>]+> ee001a10 	fmsr	s0, r1
 0[0-9a-f]+ <[^>]+> ec510a11 	fmrrs	r0, r1, {s2, s3}
-0[0-9a-f]+ <[^>]+> ec442a10 	fmsrr	r2, r4, {s0, s1}
+0[0-9a-f]+ <[^>]+> ec442a10 	fmsrr	{s0, s1}, r2, r4
 0[0-9a-f]+ <[^>]+> 0eb00a60 	fcpyseq	s0, s1
 0[0-9a-f]+ <[^>]+> 0eb00b41 	fcpydeq	d0, d1
 0[0-9a-f]+ <[^>]+> 0eb00a05 	fconstseq	s0, #80
@@ -20,7 +20,7 @@ Disassembly of section .text:
 0[0-9a-f]+ <[^>]+> 0e100a90 	fmrseq	r0, s1
 0[0-9a-f]+ <[^>]+> 0e001a10 	fmsreq	s0, r1
 0[0-9a-f]+ <[^>]+> 0c510a11 	fmrrseq	r0, r1, {s2, s3}
-0[0-9a-f]+ <[^>]+> 0c442a10 	fmsrreq	r2, r4, {s0, s1}
+0[0-9a-f]+ <[^>]+> 0c442a10 	fmsrreq	{s0, s1}, r2, r4
 0[0-9a-f]+ <[^>]+> eeb10ae0 	fsqrts	s0, s1
 0[0-9a-f]+ <[^>]+> eeb10bc1 	fsqrtd	d0, d1
 0[0-9a-f]+ <[^>]+> 0eb10ae0 	fsqrtseq	s0, s1
